--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,18 +6,17 @@ jobs:
       - image: cimg/go:1.20.5
     parallelism: 2
     resource_class: medium
-    working_directory: ~/project
+    working_directory: ~/
     steps:
       - checkout
       - run:
           name: Run tests
           command: |
-            go test -v $(go list ./... | circleci tests split --split-by=timings) ./... -json > report.json
-            gotestsum --jsonfile report.json --format=testname{{.Elapsed}} --testsuite
+            go test -v $(go list ./... | circleci tests split --split-by=timings)
       - store_test_results:
-          path: test-results
+          path: ~/
       - store_artifacts:
-          path: test-results
+          path: ~/
 
 workflows:
   test-wf:
