--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,18 +6,20 @@ jobs:
       - image: cimg/go:1.20.5
     parallelism: 2
     resource_class: medium
-    working_directory: ~/
+    working_directory: ~/project
+    # go test -v $(go list ./... | circleci tests split --split-by=timings) -json > report.json
     steps:
       - checkout
+      - run: mkdir test-results
       - run:
           name: Run tests
           command: |
-            go test -v $(go list ./... | circleci tests split --split-by=timings)
+            export TEST=$(go list ./... | circleci tests split --split-by=timings --timings-type=classname)
+            gotestsum --junitfile ~/project/test-results/report.xml -- $TEST
       - store_test_results:
-          path: ~/
+          path: ~/project/test-results
       - store_artifacts:
-          path: ~/
-
+          path: ~/project/test-results
 workflows:
   test-wf:
     jobs:
